apps/immich-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgresql
  namespace: immich
  labels:
    app: immich-postgresql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-postgresql
  template:
    metadata:
      labels:
        app: immich-postgresql
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:18-vectorchord1.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          startupProbe:
            exec:
              command:
                - pg_isready
                - -U
                - immich
                - -d
                - immich
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - immich
                - -d
                - immich
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - immich
                - -d
                - immich
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: "1000m"
              memory: 2Gi
            limits:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - name: pg-data
              mountPath: /var/lib/postgresql
      volumes:
        - name: pg-data
          persistentVolumeClaim:
            claimName: immich-postgres-pvc
---
apiVersion: v1
kind: Service

metadata:
  name: immich-postgresql
  namespace: immich

spec:
  type: ClusterIP

  selector:
    app: immich-postgresql

  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
